--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -4,6 +4,7 @@ $grey: #9bb1b6;
 $cyan: #28c6ff;
 $blue: #003065;
 $yellow: #fbfb00;
+$shadow-color: #232323;
 
 // Breakpoints
 $bp-xsmall: 36em; // 576px
@@ -44,7 +45,7 @@ $base-font-size: 1em;
 $base-line-height: 1.5;
 $header-line-height: 1;
 
-body { margin: 0; padding: 0; font-family: "aleolight", serif; }
+body { margin: 0; padding: 0; font-family: "aleo-light", serif; font-size: 1em; background-color: $white; }
 ul { list-style: none; margin: 0; padding: 0; }
 img { width: 100%; vertical-align: middle; border-style: none; image-rendering: -webkit-optimize-contrast; }
 input { border: none; }
@@ -53,7 +54,11 @@ p { margin: 0;  font-size: 1.05em; }
 a { color: inherit; text-decoration: none; background-color: transparent; }
 a:hover { text-decoration: none; }
 
-
+// Utility Classes
+.clear {
+      clear: both;
+      overflow: hidden;
+}
 
 //header
 
@@ -117,17 +122,178 @@ header {
 //main
 
       //section.showcase
-      .showcase {}
-      //end section.showcase
+      .showcase {
+            position: relative;
+            background-color: $grey;
 
-      //section.leadText
-      .leadText {
+            .showcase-img {
+                  display: inline-block;
+                  position: absolute;
+                  right: 0;
+                  z-index: 10;
+
+                  -webkit-box-shadow: 6px 7px 84px 0px $shadow-color;
+                  -moz-box-shadow: 6px 7px 84px 0px $shadow-color;
+                  box-shadow: 6px 7px 84px 0px $shadow-color;
+
+                  img {
+                        max-width: 69.625rem;
+                  }
+
+            }
+
+            &::before {
+                  content: '';
+                  display: block;
+                  width: 73.6875rem;
+                  height: 72.1875rem;
+                  background-color: $yellow;
+                  position: absolute;
+                  top: calc(0rem + 15.62rem);
+                  right: 0;
+
+            }
+
+            .showcaseWrapper {
+                  height: 87.8125rem;
+                  display: flex;
+                  flex-direction: column;
+
+                  .leadText {
+                        margin-bottom: auto;
+                        z-index: 11;
+                        color: $white;
+                        padding-top: 3rem;
+
+                        h1 {
+                              font-size: 9.375em;
+                              font-family: "aller-display", serif;
+                        }
+
+                        h3 {
+                              width: 22%;
+                              font-size: 1.75em;
+                              font-family: "aleo-regular", serif;
+                              color: $blue;
+                        }
+                  }
+
+                  .event {
+                        >.container {
+                              position: relative;
+                        }
+                        background-color: $white;
+                        .network-showcase-img{
+                              position: absolute;
+                              top: -370px;
+                              left: 0;
+                        }
+
+                        h2 {
+                              font-family: "aller-bold", serif;
+                              font-size: 1em;
+
+                              span { display: block; }
+
+                              .event-date {
+                                    font-size: 7.5em;
+                                    text-shadow: -4px 3px 0px $yellow;
+                              }
+                              .event-month {
+                                    font-size: 5.625em;
+                                    text-shadow: -4px 3px 0px $cyan;
+                              }
+                              .event-hours {
+                                    font-size: 2.25em;
+                                    text-transform: uppercase; text-shadow: -4px 3px 0px $grey;
+                              }
+                        }
+
+                  }
+
+
+            }
 
       }
-      //end section.leadText
+      //end section.showcase
+
+      //section.eventText
+      .eventText {
+            background-color: $blue;
+            background-image: url('../img/text-bg.jpg');
+            background-position: right bottom;
+            background-repeat: no-repeat;
+            color: $white;
+            padding-top: 10.625rem;
+            padding-bottom: 12.5rem;
+
+            p {
+                  font-size: 1.25em;
+                  text-align: left;
+            }
+
+      }
+      //end section.eventText
 
       //section.counter
-      .counter {}
+      .counter {
+            background-color: $grey;
+            font-family: "aleo-regular",serif;
+
+            >.container-fluid {
+                  padding-left: 0;
+            }
+
+            .counter-img {
+                  // max-width: initial;
+            }
+
+            .counter-text {
+                  text-align: center;
+                  padding-top: 7rem;
+
+                  h5 {
+                        font-size: 1.875em;
+                        color: $blue;
+                  }
+
+                  #clock-wrapper {
+                        font-family: "aller-display", serif;
+                        display: block;;
+                        text-align: center;
+                        color: $yellow;
+
+                        >div {
+                              padding: 10px;
+                              display: inline-block;
+
+                              >span {
+                                    font-size: 5.625em;
+                                    line-height: 1em;
+                                    display: inline-block;
+                              }
+
+                              .smalltext{
+                                    text-transform: uppercase;
+                                    padding-top: 5px;
+                                    font-size: 1.75em;
+                              }
+                        }
+                  }
+
+                  .btn-primary {
+                        background-color: $blue;
+                        font-size: 1.875em;
+                        padding: 1.875rem 9.75rem;
+                        box-shadow: 0px 0px 32px 0px $shadow-color;
+
+                        &:hover {
+                              background-color: $cyan;
+                        }
+                  }
+            }
+
+      }
       //end section.counter
 
       //section.dontMiss
@@ -135,17 +301,164 @@ header {
       //end section.dontMiss
 
       //section.article
-      .article {}
+      .article {
+            padding: 6.6rem 0;
+
+            position: relative;
+
+            .article-img-wrapper {
+                  -webkit-box-shadow: -29px 13px 0px 0px $yellow;
+                  -moz-box-shadow: -29px 13px 0px 0px $yellow;
+                  box-shadow: -29px 21px 0px 0px $yellow;
+                  z-index: 11;
+
+                  .article-img {
+                        position: relative;
+                        z-index: 10;
+                  }
+            }
+
+            .article-img-bg {
+                  width: initial;
+                  position: absolute;
+                  right: 15px;
+                  z-index: 9;
+            }
+
+            .article-text-wrapper {
+
+                  h3 {
+                        color: $blue;
+                        font-size: 2.5em;
+                        padding-bottom: 1rem;
+                  }
+
+                  p {
+                        font-size: 1.25em;
+                        line-height: 1.6em;
+                        border-bottom: 2px solid $cyan;
+                        padding-bottom: 1rem;
+                  }
+
+                  .article-btn {
+                        font-family: 'aleo-regular', serif;
+                        color: $cyan;
+                        display: block;
+                        margin-left: auto;
+                        font-size: 1.625rem;
+                        &:hover {
+                              color: $blue;
+                        }
+                  }
+            }
+
+
+      }
       //end section.article
 
       //section.sponsors
-      .sponsors {}
+      .sponsors {
+            padding-top: 3.125rem;
+            padding-bottom: 7.625rem;
+            text-align: center;
+            background-color: $grey;
+            h3 {
+                  color: $yellow;
+            }
+
+            .sponsors-wrapper {
+                  display: grid;
+                  grid-template-columns: repeat(5, 1fr);
+                  padding-top: 3.125rem;
+
+                  li {
+                        padding: 0 2.1875rem;
+
+                        a {
+                              display: block;
+                        }
+                  }
+            }
+      }
       //end section.sponsors
 
 //end main
 
 //footer
 footer {
+      background-color: $blue;
+      color: $white;
+      padding: 5rem 0;
+      text-align: right;
+
+      .footer-wrapper {
+            display: grid;
+            display: -ms-grid;
+            grid-template-columns: 1fr 2fr 1fr 1fr;
+
+            .copyright {
+                  display: inline-block;
+                  text-align: left;
+            }
+            .footer-menu {
+                  .footer-menu-wrapper {
+                        display: flex;
+                        display: -webkit-flex;
+                        flex-direction: row;
+                        justify-content: space-between;
+                        a{
+                              text-transform: capitalize;
+                              &:hover {
+                                    text-decoration: underline;
+                                    color: $yellow;
+                              }
+                        }
+                  }
+
+            }
+            .social {
+                  display: inline-block;
+                  .nav-item {
+                        display: inline-block;
+
+                        .social-link {
+                              display: inline-block;
+                              padding: 0;
+
+
+                              .social-icon {
+                                    width: 30px;
+                                    height: 28px;
+                              }
+
+                        }
+                        .social-link svg:hover .iconHover {
+                              fill: #28c6ff;
+                        }
+                  }
+            }
+            .powered-by {
+                  display: inline-block;
+                  p {
+                        display: inline-block;
+                        vertical-align: super;
+                  }
+                  a{
+                        &:hover {
+                              opacity: 0.7;
+                        }
+                  }
+                  .powered-by-logo {
+                        width: 50px;
+                        height: 23px;
+                        display: inline-block;
+                        background-size: cover;
+                        background-image: url("../img/footer-logo_38.png");
+                        background-repeat: no-repeat;
+                  }
+            }
+      }
+
 
 } //endfooter
 
@@ -185,88 +498,214 @@ footer {
 // MEDIA QUERIES
 
 // **************** Media MAX-WIDTH *******************
+@media #{$mq-max-retina} {  }
+//@media max-width: 3840px
+@media #{$mq-max-4k-UHD} {  }
+//@media max-width: 2560px
+@media #{$mq-max-QHD} {  }
+//@media max-width: 1920px
+@media #{$mq-max-FHD} {  }
+//@media max-width: 1600px
+@media #{$mq-max-HDPlus} {
 
-@media #{$mq-max-xsmall} {  }
-
-@media #{$mq-max-small} {  }
-
-@media #{$mq-max-medium} {
-
-header {
-      .navbar {
-            .navbar-brand { display: block; z-index: 21; }
-
-            .navbar-collapse {
-                  position: fixed;
-                  display: flex;
-                  flex-direction: column-reverse;
-                  top: -100vh;
-                  left: 0;
-                  width: 100%;
-                  height: 100vh;
-                  padding-top: 15vh;
-                  justify-content: center;
-                  text-align: center;
-                  background-color: rgba(0, 0, 0, 0.95);
-                  z-index: 1;
-                  transition: top .1s ease;
-                  -webkit-transition: top .1s ease;
-                  overflow: hidden;
-
-                        .social {
-                              .nav-item { padding: 0 0.5rem; }
+      main {
+            .counter {
+                  .counter-text {
+                        padding-top: 5rem;
+                        #clock-wrapper {
+                              >div {
+                                    >span {
+                                          font-size: 4.625em;
+                                    }
+                                    .smalltext {
+                                          font-size: 1.5em;
+                                    }
+                              }
                         }
-                        .menu {
-
+                        .btn-primary {
+                              padding: 1rem 6rem;
                         }
+                  }
 
             }
+      }
+}
+//@media max-width: 1200px
+@media #{$mq-max-large} {
+      main {
+            .counter {
+                  .counter-text {
+                        padding-top: 2rem;
+                        #clock-wrapper {
+                              >div {
+                                    >span {
+                                          font-size: 3.625em;
+                                    }
+                                    .smalltext {
+                                          font-size: 1em;
+                                    }
+                              }
+                        }
+                        .btn-primary {
+                              padding: 1rem 6rem;
+                        }
+                  }
 
-            .navbar-nav {
-                  padding-top: 3rem;
-                  width: 100%;
-                  height: 100%;
-                  display: block;
+            }
+      }
+}
+
+//@media max-width: 991px
+@media #{$mq-max-medium} {
+
+      header {
+            .navbar {
+                  .navbar-brand { display: block; z-index: 21; }
+
+                  .navbar-collapse {
+                        position: fixed;
+                        display: flex;
+                        flex-direction: column-reverse;
+                        top: -100vh;
+                        left: 0;
+                        width: 100%;
+                        height: 100vh;
+                        padding-top: 15vh;
+                        justify-content: center;
+                        text-align: center;
+                        background-color: rgba(0, 0, 0, 0.95);
+                        z-index: 1;
+                        transition: top .1s ease;
+                        -webkit-transition: top .1s ease;
+                        overflow: hidden;
+
+                              .social {
+                                    .nav-item { padding: 0 0.5rem; }
+                              }
+                              .menu {
+
+                              }
+
+                  }
+
+                  .navbar-nav {
+                        padding-top: 3rem;
+                        width: 100%;
+                        height: 100%;
+                        display: block;
+                  }
+            }
+      }
+
+      main {
+
+            .sponsors {
+                  .sponsors-wrapper {
+                        grid-template-columns: repeat(3,1fr);
+                        grid-row-gap: 4.375rem;
+                  }
+            }
+      }
+      footer {
+            text-align: center;
+            .footer-wrapper {
+                  grid-template-columns: 1fr;
+
+                  >div { margin: 1rem 0; }
+
+                  .copyright {
+                        text-align: center;
+                  }
+            }
+      }
+
+}
+
+//@media max-width: 768px
+@media #{$mq-max-small} {
+      main {
+            .article {
+                  .article-img-bg {
+                        display: none;
+                  }
+                  .article-text-wrapper {
+                        margin-top: 3rem;
+                        padding-left: 0;
+                  }
+            }
+
+            .sponsors {
+                  .sponsors-wrapper {
+                        grid-template-columns: repeat(2,1fr);
+                  }
+            }
+      }
+}
+
+//@media max-width: 576px
+@media #{$mq-max-xsmall} {
+
+      main {
+
+            .sponsors {
+                  .sponsors-wrapper {
+                        grid-template-columns: 1fr;
+                        grid-row-gap: 2.375rem;
+                  }
+            }
+      }
+      footer {
+            .footer-wrapper {
+                  .footer-menu {
+                        .footer-menu-wrapper {
+                              flex-direction: column;
+                        }
+                  }
             }
       }
 }
 
 
-}
 
-@media #{$mq-max-large} {  }
 
-@media #{$mq-max-HDPlus} {  }
 
-@media #{$mq-max-FHD} {  }
 
-@media #{$mq-max-QHD} {  }
-
-@media #{$mq-max-4k-UHD} {  }
-
-@media #{$mq-max-retina} {  }
 
 
 
 // **************** Media MIN-WIDTH *******************
+//@media min-width: 576px
 @media #{$mq-min-xsmall} {  }
 
+//@media min-width: 768px
 @media #{$mq-min-small} {  }
 
-@media #{$mq-min-medium} {  }
+//@media min-width: 991px
+@media #{$mq-min-medium} {
+      .article {
+            .article-text-wrapper {
+                  margin-left: 4rem;
+            }
+      }
+}
 
+//@media min-width: 1200px
 @media #{$mq-min-large} {  }
 
-
+//@media min-width: 1600px
 @media #{$mq-min-HDPlus} {
       .container {
             max-width: 1430px;
       }
- }
+}
+
+//@media min-width: 1920px
 @media #{$mq-min-FHD} {  }
 
+//@media min-width: 2560px
 @media #{$mq-min-QHD} {  }
 
+//@media min-width: 3840px
 @media #{$mq-min-4k-UHD} {  }
 
 @media #{$mq-min-retina} {  }
